Clean up noise and movement generation

--- a/python/DynamicStudy.ipynb
+++ b/python/DynamicStudy.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "def get_buffers(\n",
     "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=False, \n",
-    "    noise=signal_noise\n",
+    "    noise=1e-3\n",
     "):\n",
     "    \"\"\" \n",
     "    Simulate received buffers for given mic positions and corresponding times.\n",
@@ -180,6 +180,7 @@
     "    if sanity_check:\n",
     "        n_plot = 50\n",
     "        delta_t = times_list[1] - times_list[0]\n",
+    "        period = 1 / frequency_hz\n",
     "        print(f\"period of signal {period:.2e}\")\n",
     "        print(f\"delta_t % period: {delta_t % period :.2e}\")\n",
     "\n",
@@ -276,8 +277,18 @@
     "    baseline = baseline_limit * 2.0 ** baseline_factors\n",
     "    return baseline_limit, baseline\n",
     "\n",
-    "def get_source(angle_rad):\n",
-    "    return source_distance * np.array((np.cos(angle_rad), np.sin(angle_rad)))"
+    "def get_source(angle_rad, degrees=False):\n",
+    "    \n",
+    "    if np.ndim(angle_rad) == 0:\n",
+    "        if degrees:\n",
+    "            angle_rad = angle_rad / 180 * np.pi\n",
+    "            \n",
+    "        return source_distance * np.array((np.cos(angle_rad), np.sin(angle_rad)))\n",
+    "    else:\n",
+    "        if degrees:\n",
+    "            angle_rad = deepcopy(angle_rad)\n",
+    "            angle_rad = np.array(angle_rad) / 180 * np.pi\n",
+    "        return [get_source(a) for a in angle_rad]"
    ]
   },
   {
@@ -586,7 +597,17 @@
     "    # plt.gca().add_artist(l)\n",
     "    # plt.title('simulation setup')\n",
     "    # plt.legend(loc='upper left')\n",
-    "    return fig"
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time): \n",
+    "    from generate_doa_results import DURATION\n",
+    "    times_list = sampling_time * np.arange(n_samples)\n",
+    "    assert DURATION > max(times_list)\n",
+    "    \n",
+    "    degrees = times_list * angular_velocity_deg\n",
+    "    offsets = times_list * linear_velocity_cm * 1e-2\n",
+    "    return degrees, offsets, times_list"
    ]
   },
   {
@@ -595,13 +616,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# constants \n",
+    "from constants import SPEED_OF_SOUND\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "from geometry import Context\n",
+    "from plotting_tools import save_fig\n",
+    "\n",
     "frequency_desired = 4000 # in hz, will be changed to available frequency bin\n",
     "signal_noise = 1e-3  # 1e-2\n",
     "simulation_type = \"analytical\"\n",
-    "simulation_type = \"pyroom\"\n",
+    "#simulation_type = \"pyroom\"\n",
     "\n",
-    "source_distance = 20\n",
-    "time_index = int(2 * source_distance * SPEED_OF_SOUND // FS)\n",
+    "source_distance = 1 # in meters\n",
+    "time_index = int(2 * source_distance / SPEED_OF_SOUND * FS)\n",
+    "print(time_index)\n",
     "\n",
     "freqs = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
     "#method = \"das\"; log = False\n",
@@ -611,7 +639,21 @@
     "freq_index = np.argmin(np.abs(freqs - frequency_desired))\n",
     "frequency_hz = freqs[freq_index]\n",
     "print(f'using {frequency_hz}Hz instead of {frequency_desired}Hz')\n",
-    "label = str.upper(method) if method == \"das\" else str.upper(method) + \" (log)\""
+    "\n",
+    "label = str.upper(method)\n",
+    "if log:\n",
+    "    label += \" (log)\"\n",
+    "    \n",
+    "context = Context.get_crazyflie_setup()\n",
+    "mics_local = context.mics\n",
+    "mics_local -= np.mean(mics_local, axis=0)  # center the drone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example setup"
    ]
   },
   {
@@ -620,46 +662,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geometry import Context\n",
-    "\n",
-    "plot_covariance = False\n",
-    "\n",
     "gt_angles_deg = [50]  # degrees, angle of source\n",
     "phase_offsets = [0.0]  # phase offsets of each source\n",
     "\n",
-    "angular_velocity_deg = 20  # deg/sec, velocity of drone\n",
+    "angular_velocity_deg = 30  # deg/sec, angular velocity of drone\n",
+    "linear_velocity_cm = 0 # cm/sec, linear velocity\n",
+    "sampling_time = 0.5\n",
+    "n_samples = 3\n",
     "\n",
-    "baseline_limit = SPEED_OF_SOUND / frequency_hz / 2\n",
-    "\n",
-    "context = Context.get_crazyflie_setup()\n",
-    "mics_drone = context.mics\n",
-    "mics_drone -= np.mean(mics_drone, axis=0)  # center the drone\n",
-    "\n",
-    "# sanity check\n",
-    "# times_list = np.array([0, 0.8, 1.5]) #3., 6.]) #1, 1.5]) # in seconds\n",
-    "\n",
-    "# uniform array, works very well\n",
-    "degrees = [30, 60, 90]\n",
-    "times_list = np.array([d / angular_velocity_deg for d in degrees])  # in seconds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### preparation\n",
-    "period = 1 / frequency_hz\n",
-    "# make sure sampling times coincide with times\n",
-    "times_list = np.round([(t * FS) / FS for t in times_list])\n",
-    "gt_angles_rad = np.array(gt_angles_deg) / 180 * np.pi\n",
-    "\n",
-    "# TODO(FD) add translation imprecision\n",
-    "mics_noise = 0  # 1e-3  # noise added to mic positions (rigid)\n",
-    "degree_noise = 0  # 5 # noise added to each movement, in degrees\n",
+    "degree_noise = 1 # 5 # noise added to each movement, in degrees\n",
+    "offset_noise = 1e-3 # in m\n",
     "time_quantization = 6  # number of decimal places to keep\n",
-    "time_noise = 0  # 1e-6 # noise added to recording times"
+    "time_noise = 1e-6  # 1e-6 # noise added to recording times"
    ]
   },
   {
@@ -670,39 +684,22 @@
    "source": [
     "from audio_stack.beam_former import rotate_mics\n",
     "from plotting_tools import save_fig\n",
-    "from generate_doa_results import DURATION\n",
+    "from generate_doa_results import move_mics, get_noisy_times\n",
     "\n",
-    "np.random.seed(1)\n",
-    "\n",
-    "assert DURATION > max(times_list)\n",
-    "\n",
-    "sources = []\n",
-    "for gt_angle_rad in gt_angles_rad:\n",
-    "    sources.append(get_source(gt_angle_rad))\n",
+    "sources = get_source(gt_angles_deg, degrees=True)\n",
+    "degrees, offsets, times_list = get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time)\n",
     "\n",
     "# create noisy versions\n",
-    "mics_drone_noisy = deepcopy(mics_drone)\n",
-    "times_list_noisy = deepcopy(times_list)\n",
-    "degrees_noisy = deepcopy(degrees)\n",
-    "if mics_noise > 0:\n",
-    "    mics_drone_noisy += np.random.normal(scale=mics_noise, size=mics_drone.shape)\n",
-    "if time_noise > 0:\n",
-    "    times_list_noisy += np.random.normal(scale=time_noise, size=times_list.shape)\n",
-    "if time_quantization > 0:\n",
-    "    times_list_noisy = np.round(times_list_noisy, time_quantization)\n",
-    "if degree_noise > 0:\n",
-    "    degrees_noisy += np.random.normal(scale=degree_noise, size=degrees.shape)\n",
+    "# what we actually moved to\n",
+    "mics_list = move_mics(mics_local, degrees, offsets, {\"degree\": degree_noise, \"offset\": offset_noise})\n",
+    "# what we think we moved to\n",
+    "mics_clean = move_mics(mics_local, degrees, offsets)\n",
+    "# what we think we measured at\n",
+    "times_list_noisy = get_noisy_times(times_list, time_noise)\n",
     "\n",
-    "# we think we move to \"degrees\" position but we actually move to degrees_noisy.\n",
-    "mics_list = [\n",
-    "    rotate_mics(mics_drone_noisy, orientation_deg=degree) for degree in degrees_noisy\n",
-    "]\n",
-    "\n",
-    "if mics_noise > 0:\n",
-    "    for i, (degree, mics) in enumerate(zip(degrees, mics_list)):\n",
-    "        plt.scatter(*mics.T, label=f\"noisy {degree:.0f} deg\", color=f\"C{i}\")\n",
-    "\n",
-    "mics_clean = [rotate_mics(mics_drone, orientation_deg=degree) for degree in degrees]\n",
+    "print('baselines: \\n', np.linalg.norm(mics_local[None, ...] - mics_local[:, None, :], axis=2))\n",
+    "baseline_limit = SPEED_OF_SOUND / frequency_hz / 2\n",
+    "print('baseline limit:', baseline_limit)\n",
     "\n",
     "fig = plot_setup(degrees, mics_list, sources)\n",
     "plt.xlim(-10, 10)\n",
@@ -764,16 +761,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# note that we use mics_list here, which is the noisy version.\n",
     "buffer_f_list, buffer_f_multimic = get_buffers(\n",
-    "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=True\n",
+    "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=True,\n",
+    "    noise=signal_noise\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Do beamforming, separately"
    ]
   },
   {
@@ -785,7 +777,9 @@
     "from audio_stack.beam_former import BeamFormer\n",
     "\n",
     "def separate_doa(plot=False, polar=True):\n",
-    "    for buffer_f, mics, degree in zip(buffer_f_list, mics_list, degrees):\n",
+    "    # note that we use degree, the theoretical orientation. the drone has actually\n",
+    "    # moved to degree_noisy (which is used in get_buffers)\n",
+    "    for buffer_f, mics, degree in zip(buffer_f_list, mics_clean, degrees):\n",
     "        beam_former = BeamFormer(mic_positions=mics)\n",
     "        R = beam_former.get_correlation(buffer_f)\n",
     "\n",
@@ -827,7 +821,10 @@
    "outputs": [],
    "source": [
     "def multi_mic_doa(plot=False, polar=True, extension=\".pdf\"):\n",
-    "    mics_array = np.concatenate([*mics_list])\n",
+    "    \n",
+    "    # note that we use the clean mics here, although the signals are actually\n",
+    "    # coming from the noisy mics_list. \n",
+    "    mics_array = np.concatenate([*mics_clean])\n",
     "    beam_former = BeamFormer(mics_array)\n",
     "    R_multimic = beam_former.get_correlation(buffer_f_multimic.T)\n",
     "    frequencies = np.array([frequency_hz])\n",
@@ -878,7 +875,7 @@
     "    print(\"using\", method)\n",
     "    frequencies = np.array([frequency_hz])\n",
     "\n",
-    "    beam_former = BeamFormer(mic_positions=mics_drone)\n",
+    "    beam_former = BeamFormer(mic_positions=mics_local)\n",
     "    beam_former.init_multi_estimate(frequencies, combination_n=len(degrees))\n",
     "    beam_former.init_dynamic_estimate(\n",
     "        frequencies,\n",
@@ -891,20 +888,20 @@
     "        fig = plt.figure()\n",
     "        fig.set_size_inches(3, 3)\n",
     "\n",
-    "    for i, (sig_f, time) in enumerate(zip(buffer_f_list, times_list_noisy)):\n",
-    "        beam_former.add_to_multi_estimate(sig_f, frequencies, time, degrees[i])\n",
+    "    # note that we use degree, the theoretical orientation. the drone has actually\n",
+    "    # moved to degree_noisy (which is used in get_buffers)\n",
+    "    for (sig_f, time, degree) in zip(buffer_f_list, times_list_noisy, degrees):\n",
+    "        beam_former.add_to_multi_estimate(sig_f, frequencies, time, degree)\n",
     "        spec = beam_former.add_signals_to_dynamic_estimates(\n",
-    "            sig_f, frequencies, degrees[i], method=method\n",
+    "            sig_f, frequencies, degree, method=method\n",
     "        )\n",
     "\n",
     "        if plot:\n",
-    "            \n",
     "            if log:\n",
     "                plot_spectrum(np.log10(spec), polar, title=\"raw spectra\")\n",
     "            else:\n",
     "                plot_spectrum(spec, polar, title=\"raw spectra\")\n",
     "\n",
-    "                \n",
     "    spectrum_dynamic = beam_former.get_dynamic_estimate()\n",
     "    spectrum_delayed = beam_former.get_multi_estimate(method=method)\n",
     "\n",
@@ -953,18 +950,16 @@
     "    # with 40 it is ok, with 50 it is better! find out why\n",
     "    gt_angles_deg = np.arange(10, 190, step=50)  # , 180, 270]\n",
     "\n",
-    "gt_angles_rad = np.array(gt_angles_deg) / 180 * np.pi\n",
     "phase_offsets = np.random.uniform(0, 2 * np.pi, size=len(gt_angles_deg))\n",
     "\n",
-    "sources = []\n",
-    "for gt_angle_rad in gt_angles_rad:\n",
-    "    sources.append(get_source(gt_angle_rad))\n",
+    "sources = get_source(gt_angles_deg, degrees=True)\n",
     "    \n",
     "fig = plot_setup(degrees, mics_list, sources)\n",
     "save_fig(fig, f\"{dir_name}/setup_{source_type}.pdf\")\n",
     "\n",
     "buffer_f_list, buffer_f_multimic = get_buffers(\n",
-    "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=False\n",
+    "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=False,\n",
+    "    noise=signal_noise\n",
     ")\n",
     "multi_mic_doa(plot=True, polar=polar, extension=f\"_{source_type}.pdf\")"
    ]
@@ -979,52 +974,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test with lateral movement"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_angles_rad = [a / 180 * np.pi for a in [50]]\n",
-    "degrees = [0, 20, 40] #[30, 60, 90]\n",
-    "movement = 1e-2  # time delay breaks down for 1e-1!\n",
-    "lateral_movement = movement * np.arange(len(degrees))  # in m\n",
+    "gt_angles_deg = [50]  # degrees, angle of source\n",
+    "phase_offsets = [0.0]  # phase offsets of each source\n",
     "\n",
-    "sources = []\n",
-    "for gt_angle_rad in gt_angles_rad:\n",
-    "    sources.append(get_source(gt_angle_rad))\n",
-    "    \n",
+    "angular_velocity_deg = 30  # deg/sec, angular velocity of drone\n",
+    "linear_velocity_cm = 1 # cm/sec, linear velocity # 2 ok, 5 starts to break, 10 broken\n",
+    "sampling_time = 0.5\n",
+    "n_samples = 3\n",
+    "\n",
+    "degree_noise = 1 # 5 # noise added to each movement, in degrees\n",
+    "offset_noise = 1e-3 # in m\n",
+    "time_quantization = 6  # number of decimal places to keep\n",
+    "time_noise = 1e-6  # 1e-6 # noise added to recording times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sources = get_source(gt_angles_deg, degrees=True)\n",
+    "degrees, offsets, times_list = get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time)\n",
+    "\n",
     "# create noisy versions\n",
-    "mics_drone_noisy = deepcopy(mics_drone)\n",
-    "times_list_noisy = deepcopy(times_list)\n",
-    "degrees_noisy = deepcopy(degrees)\n",
-    "lateral_noisy = deepcopy(lateral_movement)\n",
-    "if mics_noise > 0:\n",
-    "    mics_drone_noisy += np.random.normal(scale=mics_noise, size=mics_drone.shape)\n",
-    "if time_noise > 0:\n",
-    "    times_list_noisy += np.random.normal(scale=time_noise, size=times_list.shape)\n",
-    "if time_quantization > 0:\n",
-    "    times_list_noisy = np.round(times_list_noisy, time_quantization)\n",
-    "if degree_noise > 0:\n",
-    "    degrees_noisy += np.random.normal(scale=degree_noise, size=degrees.shape)\n",
-    "\n",
-    "# we think we move to \"degrees\" position but we actually move to degrees_noisy.\n",
-    "mics_list = [\n",
-    "    rotate_mics(mics_drone_noisy, orientation_deg=degree)\n",
-    "    + np.array([lateral, 0])[None, :]\n",
-    "    for degree, lateral in zip(degrees_noisy, lateral_noisy)\n",
-    "]\n",
-    "mics_clean = [\n",
-    "    rotate_mics(mics_drone_noisy, orientation_deg=degree)\n",
-    "    + np.array([lateral, 0])[None, :]\n",
-    "    for degree, lateral in zip(degrees, lateral_movement)\n",
-    "]\n",
+    "mics_list = move_mics(mics_local, degrees, offsets, {\"degree\": degree_noise, \"offset\": offset_noise})\n",
+    "mics_clean = move_mics(mics_local, degrees, offsets)\n",
+    "times_list_noisy = get_noisy_times(times_list, time_noise)\n",
     "\n",
     "fig = plot_setup(degrees, mics_list, sources)\n",
     "save_fig(fig, f\"{dir_name}/setup_lateral.pdf\")\n",
     "\n",
-    "\n",
     "buffer_f_list, buffer_f_multimic = get_buffers(\n",
-    "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=False\n",
+    "    mics_list, times_list, frequency_hz, simulation_type, sanity_check=False,\n",
+    "    noise=signal_noise\n",
     ")\n",
     "multi_mic_doa(plot=True, extension=\"_lateral.pdf\")"
    ]
