Generate simulation results that make sense

--- a/python/DynamicStudy.ipynb
+++ b/python/DynamicStudy.ipynb
@@ -103,6 +103,7 @@
     "from generate_doa_results import (\n",
     "    generate_signals_analytical,\n",
     "    generate_signals_pyroom,\n",
+    "    get_source,\n",
     "    from_0_to_2pi,\n",
     ")\n",
     "\n",
@@ -223,7 +224,6 @@
     "        return mics\n",
     "    else:\n",
     "        raise ValueError(method)\n",
-    "\n",
     "\n",
     "def get_baselines(frequency_hz, baseline_factors):\n",
     "    from constants import SPEED_OF_SOUND\n",
@@ -514,6 +514,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from generate_doa_results import COMBINATION_METHOD, NORMALIZATION_METHOD\n",
+    "\n",
     "def kinetic_doa(plot=False, extension=\".pdf\"):\n",
     "    print(\"using\", method)\n",
     "    frequencies = np.array([frequency_hz])\n",
@@ -523,16 +525,16 @@
     "    beam_former.init_dynamic_estimate(\n",
     "        frequencies,\n",
     "        combination_n=len(degrees),\n",
-    "        combination_method=\"sum\",\n",
-    "        normalization_method=\"none\",\n",
+    "        combination_method=COMBINATION_METHOD,\n",
+    "        normalization_method=NORMALIZATION_METHOD,\n",
     "    )\n",
     "\n",
     "    ax = None\n",
     "\n",
     "    # note that we use degree, the theoretical orientation. the drone has actually\n",
     "    # moved to degree_noisy (which is used in get_buffers)\n",
-    "    for (sig_f, time, degree) in zip(buffer_f_list, times_list_noisy, degrees):\n",
-    "        beam_former.add_to_multi_estimate(sig_f, frequencies, time, degree)\n",
+    "    for (sig_f, time, degree, offset) in zip(buffer_f_list, times_list_noisy, degrees, offsets):\n",
+    "        beam_former.add_to_multi_estimate(sig_f, frequencies, time, degree, offset)\n",
     "        spec = beam_former.add_signals_to_dynamic_estimates(\n",
     "            sig_f, frequencies, degree, method=method\n",
     "        )\n",
@@ -636,22 +638,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time): \n",
-    "    from generate_doa_results import DURATION\n",
-    "    times_list = sampling_time * np.arange(n_samples)\n",
-    "    assert DURATION > max(times_list)\n",
-    "    \n",
-    "    degrees = times_list * angular_velocity_deg\n",
-    "    offsets = times_list * linear_velocity_cm * 1e-2\n",
-    "    return degrees, offsets, times_list"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -668,6 +654,7 @@
     "from constants import SPEED_OF_SOUND\n",
     "from geometry import Context\n",
     "from plotting_tools import save_fig\n",
+    "from generate_doa_results import GT_ANGLE_DEG, get_movement\n",
     "\n",
     "frequency_desired = 4000 # in hz, will be changed to available frequency bin\n",
     "signal_noise = 1e-3  # 1e-2\n",
@@ -696,18 +683,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_angles_deg = [130]  # degrees, angle of source\n",
+    "gt_angles_deg = [GT_ANGLE_DEG]  # degrees, angle of source\n",
     "phase_offsets = [0.0]  # phase offsets of each source\n",
     "\n",
     "angular_velocity_deg = 30  # deg/sec, angular velocity of drone\n",
     "linear_velocity_cm = 0 # cm/sec, linear velocity\n",
-    "sampling_time = 1.0\n",
-    "n_samples = 2\n",
+    "sampling_time = 0.5 # was 1.0\n",
+    "n_samples = 3 # was 2\n",
     "\n",
     "degree_noise = 0 #1 # 5 # noise added to each movement, in degrees\n",
     "offset_noise = 0 #1e-2 # in m\n",
     "time_quantization = 6  # number of decimal places to keep\n",
-    "time_noise = 0 #1e-6  # 1e-6 # noise added to recording times"
+    "time_noise = 1e-6 #1e-6  # 1e-6 # noise added to recording times"
    ]
   },
   {
@@ -916,16 +903,17 @@
     "method = \"mvdr\"; log=True\n",
     "#method = \"das\"; log=False\n",
     "\n",
-    "gt_angles_deg = [130]  # degrees, angle of source\n",
+    "gt_angles_deg = [GT_ANGLE_DEG]  # degrees, angle of source\n",
     "phase_offsets = [0.0]  # phase offsets of each source\n",
     "\n",
-    "angular_velocity_deg = 30  # deg/sec, angular velocity of drone\n",
-    "linear_velocity_cm = 2 # cm/sec, linear velocity # 2, 4 ok, 6 okish, 8 broken\n",
+    "\n",
+    "angular_velocity_deg = 0  # deg/sec, angular velocity of drone\n",
+    "linear_velocity_cm = 50 # cm/sec, linear velocity # 2, 4 ok, 6 okish, 8 broken\n",
     "sampling_time = 0.5\n",
     "n_samples = 3\n",
     "\n",
     "degree_noise = 1 # 5 # noise added to each movement, in degrees\n",
-    "offset_noise = 1e-3 # in m\n",
+    "offset_noise = 1e-2 # in m\n",
     "time_quantization = 6  # number of decimal places to keep\n",
     "time_noise = 1e-6  # 1e-6 # noise added to recording times"
    ]
@@ -961,7 +949,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Full pipeline"
+    "# 3. Full pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_angle_error(spec):\n",
+    "    est_angle_deg = angles[np.argmax(spec)]\n",
+    "    unwrap_angles = np.unwrap(np.array([est_angle_deg, GT_ANGLE_DEG]) / 180 * np.pi)\n",
+    "    return abs(unwrap_angles[1] - unwrap_angles[0]) * 180 / np.pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## result overview"
    ]
   },
   {
@@ -975,37 +982,35 @@
     "import pandas as pd\n",
     "from generate_doa_results import GT_ANGLE_DEG\n",
     "\n",
-    "def get_angle_error(spec):\n",
-    "    est_angle_deg = angles[np.argmax(spec)]\n",
-    "    unwrap_angles = np.unwrap(np.array([est_angle_deg, GT_ANGLE_DEG]) / 180 * np.pi)\n",
-    "    return abs(unwrap_angles[1] - unwrap_angles[0]) * 180 / np.pi\n",
-    "\n",
-    "\n",
     "label_list = [\"spectrum_dynamic\", \"spectrum_delayed\", \"spectrum_multimic\"]\n",
     "\n",
-    "# fname = 'results/degree_noise.pkl'; plot_by = \"degree_noise\"; unit=\"deg\"\n",
-    "fname = \"results/time_noise.pkl\"\n",
-    "plot_by = \"time_noise\"\n",
-    "unit = \"s\"\n",
+    "#fname = 'results/doa_degree_noise.pkl'; plot_by = \"degree_noise\"; unit=\"deg\"\n",
+    "fname = 'results/doa_lateral_movement.pkl'; plot_by = \"linear_velocity_cm\"; unit=\"cm/s\"\n",
+    "#fname = 'results/doa_time_noise.pkl'; plot_by = \"time_noise\"; unit=\"s\"\n",
+    "df = pd.read_pickle(fname)\n",
+    "\n",
+    "frequency = 3000\n",
     "\n",
     "df = pd.read_pickle(fname)\n",
-    "freq_i = 0  # only have one frequency.\n",
+    "freq_i = 0  # only have one frequency for each experiment.\n",
     "\n",
     "n_angles = df.iloc[0].spectrum_multimic.shape[1]  # n_freq x n_angles\n",
     "angles = np.linspace(0, 360, n_angles)\n",
     "\n",
     "noise_levels = df[plot_by].unique()\n",
     "n_noise_levels = len(noise_levels)\n",
-    "print(n_noise_levels)\n",
+    "print(\"number of noise levels (=rows):\", n_noise_levels)\n",
     "n_it = len(df.it.unique())\n",
     "boxplot_mat = np.empty(\n",
     "    (len(label_list), n_it, n_noise_levels)\n",
     ")  # each slice will be one boxplot\n",
     "\n",
     "for d, (noise_level, df_noise_level) in enumerate(df.groupby(plot_by)):\n",
+    "    df_noise_level = df_noise_level.loc[df_noise_level.frequency==frequency]\n",
     "    fig, axs = plt.subplots(1, len(label_list))  # sharey=True, sharex=True)\n",
-    "    fig.suptitle(f\"{plot_by.replace('_', ' ')} {noise_level:.1g}{unit}\", y=1.1)\n",
+    "    fig.suptitle(f\"{plot_by.replace('_', ' ')} {noise_level:.2g}{unit}\", y=1.1)\n",
     "    fig.set_size_inches(10, 3)\n",
+    "    \n",
     "    for counter, (__, row) in enumerate(df_noise_level.iterrows()):\n",
     "        for l, label in enumerate(label_list):\n",
     "            if counter <= 3:\n",
@@ -1039,6 +1044,88 @@
     "    ax_box[l].set_title(label)\n",
     "    ax_box[l].set_xlabel(f\"{plot_by.replace('_', ' ')}[{unit}]\")\n",
     "ax_box[0].set_ylabel(\"absolute error [deg]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_pivot_table(df, column=\"time_noise\", index=\"frequency\", \n",
+    "                     values=\"spectrum_delayed\", log=False):\n",
+    "\n",
+    "    from plotting_tools import pcolorfast_custom, add_colorbar\n",
+    "\n",
+    "    def aggfunc(column, function=np.mean):\n",
+    "        values = []\n",
+    "        for row in column:\n",
+    "            error_deg = get_angle_error(row[freq_i])\n",
+    "            values.append(error_deg)\n",
+    "        return function(values)\n",
+    "\n",
+    "    def mean(column):\n",
+    "        return aggfunc(column, np.mean)\n",
+    "\n",
+    "    def std(column):\n",
+    "        return aggfunc(column, np.std)\n",
+    "\n",
+    "\n",
+    "    #mean = lambda x: aggfunc(x, np.mean)\n",
+    "    #std = lambda x: aggfunc(x, np.std)\n",
+    "    tb = pd.pivot_table(data=df, values=values, index=index, \n",
+    "                        columns=column,\n",
+    "                        aggfunc=[mean, std]) #{\"mean\": mean,  \"std\": std})\n",
+    "    print(tb)\n",
+    "\n",
+    "    for label in [\"mean\", \"std\"]:\n",
+    "        tb_mean = tb.iloc[:, tb.columns.get_level_values(0)==label]\n",
+    "        noises = tb_mean.columns.get_level_values(1)\n",
+    "        \n",
+    "        if log:\n",
+    "            values = np.log10(tb_mean.values)\n",
+    "        else:\n",
+    "            values = tb_mean.values\n",
+    "\n",
+    "        fig, ax = plt.subplots()\n",
+    "        im = pcolorfast_custom(ax, np.arange(len(noises)), tb_mean.index.values, values)\n",
+    "        add_colorbar(fig, ax, im)\n",
+    "        if max(noises) <= 1.0:\n",
+    "            ax.set_xticklabels(np.round(np.log10(noises), 1))\n",
+    "            ax.set_xlabel(column.replace(\"_\", \" \") + \" (log)\")\n",
+    "        else:\n",
+    "            ax.set_xticklabels(noises)\n",
+    "            ax.set_xlabel(column.replace(\"_\", \" \"))\n",
+    "        \n",
+    "        if index == \"frequency\":\n",
+    "            ax.set_ylabel(\"frequency [Hz]\")\n",
+    "        else:\n",
+    "            ax.set_ylabel(index.replace(\"_\", \" \"))\n",
+    "            \n",
+    "        ax.set_title(label + \" of angle error (deg)\")\n",
+    "\n",
+    "# this one is also okay!\n",
+    "fname = 'results/doa_lateral_movement.pkl'\n",
+    "df = pd.read_pickle(fname)\n",
+    "plot_pivot_table(df, column=\"linear_velocity_cm\", log=False)\n",
+    "\n",
+    "# this one is okay!\n",
+    "#fname = 'results/doa_time_noise.pkl'\n",
+    "#fname = 'results/doa_time_noise_higher.pkl'\n",
+    "#df = pd.read_pickle(fname)\n",
+    "#plot_pivot_table(df, column=\"time_noise\")\n",
+    "\n",
+    "# this one is okay!\n",
+    "# fname = 'results/doa_degree_noise.pkl'\n",
+    "# df = pd.read_pickle(fname)\n",
+    "# plot_pivot_table(df, column=\"degree_noise\")"
    ]
   },
   {
